[package]
name = "morse"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
hashbrown = "0.11.2"

[[bench]]
name = "decode"
harness = false
